--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 				<h1>Big Picture</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#one">O que eu faço?</a></li>
-						<li><a href="#two">Quem eu sou?</a></li>
-						<li><a href="#work">Meu Trabalho</a></li>
-						<li><a href="#contact">Contato</a></li>
+						<li><a href="#introducao">Introdução</a></li>
+						<li><a href="#o-que-faco">O que eu faço?</a></li>
+						<li><a href="#quem-sou">Quem eu sou?</a></li>
+						<li><a href="#trabalho">Meu Trabalho</a></li>
+						<li><a href="#contacto">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
