--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Matheus...</h2>
+						<h2>Olá...</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Bem vindo ao meu <strong>Big Picture</strong>. Aqui você poderá ver algumas fotos das viagens que faço enquanto trabalho 
+						como nomade digital e vivo uma aventura!</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
