Update description section

--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>O que eu faço?</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Eu sou desenvolvedor Full-Stack na 
+						<a href="https://www.rocketseat.com.br/">Rocketseat</a>, trabalho remoto e viajando pelo mundo. Tembém tenho um 
+						<a href="https://www.youtube.com/c/MatheusRodacki/" >Canal no Youtube</a> onde posto algumas filmagens de drone.
+						Acesse mais conteúdo excluisivos no Instagram também:
+						<a href="https://www.instagram.com/matheusrodacki/">IG</a>
+
+					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
