--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
 					<header>
 						<h2>O que eu faço?</h2>
 					</header>
-					<p>Eu sou desenvolvedor Full-Stack na 
-						<a href="https://www.rocketseat.com.br/">Rocketseat</a>, trabalho remoto e viajando pelo mundo. Tembém tenho um 
-						<a href="https://www.youtube.com/c/MatheusRodacki/" >Canal no Youtube</a> onde posto algumas filmagens de drone.
-						Acesse mais conteúdo excluisivos no Instagram também:
-						<a href="https://www.instagram.com/matheusrodacki/">IG</a>
+					<p>Eu sou desenvolvedor Full-Stack na <a href="https://www.rocketseat.com.br/">Rocketseat</a>, trabalho remoto e viajando pelo mundo. 
+						Também tenho um	<a href="https://www.youtube.com/c/MatheusRodacki/" >Canal no Youtube</a> onde posto algumas filmagens de drone.
+						Acesse mais conteúdo excluisivos no Instagram:<a href="https://www.instagram.com/matheusrodacki/">IG</a>
 
 					</p>
 				</div>
