--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<header>
 						<h2>Quem eu sou?</h2>
 					</header>
-					<p>Meu nome é Matheus, tenho 24 anos e sou da cidade de São Paulo, maior centro comercia e economido da américa latina. 
+					<p>Meu nome é <strong> Matheus Rodacki</strong>, tenho 24 anos e sou da cidade de São Paulo, maior centro comercia e economido da américa latina. 
 						Adoro lugares paradiziacos e estou combinando dois sonhos meus, trablhar com Desenvolvimento e viajando em um motohome com a minha esposa.
 						Nosso grande objetivo é ir do Ushuaia ao Alaska, mas antes estamos dando um rolê por esse Brasilzão conhecendo o país mais bonito do mundo.
 					</p>
