Edit Intro Content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<header>
 						<h2>Olá...</h2>
 					</header>
-					<p>Bem vindo ao meu portifólio. Aqui você poderá ver algumas fotos das viagens que faço enquanto trabalho 
+					<p>Bem vindo ao meu portifólio fotográfico. Aqui você poderá ver algumas fotos das viagens que faço enquanto trabalho 
 						como nomade digital e vivo uma aventura!</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
