--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<nav>
 					<ul>
 						<li><a href="#introducao">Introdução</a></li>
-						<li><a href="#o-que-faco">O que eu faço?</a></li>
 						<li><a href="#quem-sou">Quem eu sou?</a></li>
+						<li><a href="#o-que-faco">O que eu faço?</a></li>
 						<li><a href="#trabalho">Meu Trabalho</a></li>
 						<li><a href="#contacto">Contato</a></li>
 					</ul>
@@ -38,22 +38,6 @@
 				</div>
 			</section>
 
-		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>O que eu faço?</h2>
-					</header>
-					<p>Eu sou desenvolvedor Full-Stack na <a href="https://www.rocketseat.com.br/">Rocketseat</a>, trabalho remoto e viajando pelo mundo. 
-						Também tenho um	<a href="https://www.youtube.com/c/MatheusRodacki/" >Canal no Youtube</a> onde posto algumas filmagens de drone.
-						Acesse mais conteúdo excluisivos no Instagram:<a href="https://www.instagram.com/matheusrodacki/">IG</a>
-
-					</p>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Two -->
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
@@ -66,6 +50,20 @@
 					</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
+			</section>
+			
+			<section id="one" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>O que eu faço?</h2>
+					</header>
+					<p>Eu sou desenvolvedor Full-Stack na <a href="https://www.rocketseat.com.br/">Rocketseat</a>, trabalho remoto e viajando pelo mundo. 
+						Também tenho um	<a href="https://www.youtube.com/c/MatheusRodacki/" >Canal no Youtube</a> onde posto algumas filmagens de drone.
+						Acesse mais conteúdo excluisivos no <a href="https://www.instagram.com/matheusrodacki/">Instagram</a>
+
+					</p>
+				</div>
+				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
