Update My Work section with text and photos

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 						<h2>O que eu faço?</h2>
 					</header>
 					<p>Eu sou desenvolvedor Full-Stack na <a href="https://www.rocketseat.com.br/">Rocketseat</a>, trabalho remoto e viajando pelo mundo. 
-						Também tenho um	<a href="https://www.youtube.com/c/MatheusRodacki/" >Canal no Youtube</a> onde posto algumas filmagens de drone.
-						Acesse mais conteúdo excluisivos no <a href="https://www.instagram.com/matheusrodacki/">Instagram</a>
+						Acesse mais conteúdos excluisivos no meu <a href="https://www.instagram.com/matheusrodacki/">Instagram.</a>
 
 					</p>
 				</div>
@@ -70,31 +69,32 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Meu Trabalho</h2>
+						<p>Adoro fotografar paisagens, pois cada foto guarda o presente que é viver uma aventura, é como um troféu. Os lugares mais inóspitos é onde estão as paisagens mais belas,
+							e para revela-las é necessário seguir trilhas, subir montanhas, atravessar rios e vales mas no final é sempre recompensador. É possível ver também alguns vídeos em que sobrevoei 
+							essa paísagens no meu canal do <strong><a href="https://youtube.com/matheusrodacki" >Youtube.</a></strong>
+						</p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/fulls/cataratas_4k.jpg" class="image fit"><img src="images/thumbs/cataratas_thumb.jpg" title="Cataratas do Zimbabue" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/Fitz_Roy_4k.jpg" class="image fit"><img src="images/thumbs/Fitz_Roy_thumb.jpg" title="Fitz Roi" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/Ilha_4k.jpg" class="image fit"><img src="images/thumbs/Ilha_thumb.jpg" title="Ilha Solteira" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/fulls/lago_gelado_4k.jpg" class="image fit"><img src="images/thumbs/lago_gelado_thumb.jpg" title="Lago Michigan" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/perito_moreno_4k.jpg" class="image fit"><img src="images/thumbs/perito_moreno_thumb.jpg" title="Glacial Perito Moreno" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/praia_4k.jpg" class="image fit"><img src="images/thumbs/praia_thumb.jpg" title="Pria de Jericoacoara" alt="" /></a>
 							</article>
 						</div>
 
