--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Diga um Oi :)</h2>
+						<p>Caso queira entrar em contato envia sua menssagem abaixo, garanto que respondo assim que possível!</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
 							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
+								<div class="field half"><input type="text" name="name" placeholder="Nome" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
+								<div class="field"><textarea name="message" placeholder="Menssagem" rows="6"></textarea></div>
 							</div>
 							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
+								<li><input type="submit" value="Enviar menssagem" /></li>
 							</ul>
 						</form>
 					</div>
