Fix Anchors and update title

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Matheus Rodacki</h1>
 				<nav>
 					<ul>
-						<li><a href="#introducao">Introdução</a></li>
+						<li><a href="#intro">Introdução</a></li>
 						<li><a href="#quem-sou">Quem eu sou?</a></li>
 						<li><a href="#o-que-faco">O que eu faço?</a></li>
 						<li><a href="#trabalho">Meu Trabalho</a></li>
-						<li><a href="#contacto">Contato</a></li>
+						<li><a href="#contact">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -33,12 +33,13 @@
 					<p>Bem vindo ao meu portifólio fotográfico. Aqui você poderá ver algumas fotos das viagens que faço enquanto trabalho 
 						como nomade digital e vivo uma aventura!</p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+						<a href="#quem-sou" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
 
-			<section id="two" class="main style2 left dark fullscreen">
+		<!-- Quem Sou -->
+			<section id="quem-sou" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>Quem eu sou?</h2>
@@ -49,10 +50,11 @@
 
 					</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#o-que-faco" class="button style2 down anchored">Next</a>
 			</section>
-			
-			<section id="one" class="main style2 right dark fullscreen">
+
+		<!-- O Que Faço -->
+			<section id="o-que-faco" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>O que eu faço?</h2>
@@ -62,11 +64,11 @@
 
 					</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#trabalhos" class="button style2 down anchored">Next</a>
 			</section>
 
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
+		<!-- Trabalhos -->
+			<section id="trabalhos" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Meu Trabalho</h2>
